--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header {
 	display: flex;			/*flexボックスを使う指定*/
 	align-items: center;	/*垂直揃えの指定。上下中央に配置されるように。*/
 	padding: 5px 20px;		/*上下、左右へのヘッダー内の余白*/
-	background: #111;		/*背景色*/
+	background: #9cd3db;		/*背景色*/
 	color: #fff;			/*文字色*/
 }
 
@@ -129,7 +129,7 @@ header #logo {
 	flex-direction: column;			/*子要素（３本バー）を縦並びにする*/
 	justify-content: space-between;	/*並びかたの種類の指定*/
 	order: 0;			/*表示させる順番。「#menubar_hdr」「#logo」「#header-icon」それぞれに指定しており、数字の「小さな順」に左から並びます。*/
-	background: #111;	/*背景色*/
+	background: #9cd3db;	/*背景色*/
 }
 
 /*バー１本あたりの設定*/
@@ -296,7 +296,7 @@ footer small {font-size: 100%;}
 
 footer {
 	font-size: 0.6rem;		/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
-	background: #111;		/*背景色*/
+	background: #9cd3db;		/*背景色*/
 	color: #fff;			/*文字色*/
 	text-align: center;		/*内容をセンタリング*/
 	padding: 10px;			/*ボックス内の余白*/
@@ -522,7 +522,7 @@ header #logo {
 
 /*現在表示中のメニュー設定（current）*/
 #menubar li.current a {
-	background: #111;	/*背景色*/
+	background: #9cd3db;	/*背景色*/
 	color: #fff;		/*文字色*/
 }
 
@@ -561,7 +561,7 @@ main {
 
 /*bg1設定。サンプルテンプレートでは「サービス」と書いてあるマーク*/
 #new dt span.icon-bg1 {
-	background: #111;	/*背景色*/
+	background: #9cd3db;	/*背景色*/
 }
 
 /*記事(dd)設定*/
@@ -782,7 +782,7 @@ main {
 .ac-box label{
 	font-size: 14px;
 	text-align: left;
-	background: #111;
+	background: #9cd3db;
 	margin: 10px;
 	line-height: 30px;
 	position: relative;
