--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ input {
 /*————————————————————————————————*/
 html {
   height: 100%;
-  background-color: rgb(15, 30, 60);
-  background-image: linear-gradient(to top, rgb(10, 20, 40) 0%, rgb(20, 40, 80) 100%);
+  background-color: #71a1a8;
 }
 input {
   font-family: "Orbitron", sans-serif;
