--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ input {
   border-radius: 25px;
   color: rgb(200, 210, 240);
   -webkit-text-fill-color: rgb(200, 210, 240);
-  background-color: rgb(10, 20, 40);
+  background-color: #def2f5;
   font-size: 40px;
 }
 input::placeholder {
@@ -58,6 +58,6 @@ p {
   font-weight: 600;
   font-size: 20px;
   line-height: 40px;
-  color: rgb(200, 210, 240);
-  -webkit-text-fill-color: rgb(200, 210, 240);
+  color: #def2f5;
+  -webkit-text-fill-color: #def2f5;
 }
