--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
@@ -686,6 +686,23 @@ main {
    background-color:#fff;	
 }
 
+.select2{
+   display: flex;
+   width: 150px;
+   align-items: center;
+}
+
+.select2 > select{
+   padding: 8px 4px;
+   margin: 5px;
+   border: 1px solid #ccc;
+   border-radius: 4px;
+   font-size: 17px;
+   color: #666666;
+   text-align: center;
+   background-color:#fff;	
+}
+
 .ws{
    background-color:#fff;
    border: 1px solid #ccc;
