--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
@@ -688,7 +688,7 @@ main {
 
 .select2{
    display: flex;
-   width: 150px;
+   width: 100%;
    align-items: center;
 }
 
@@ -700,7 +700,8 @@ main {
    font-size: 17px;
    color: #666666;
    text-align: center;
-   background-color:#fff;	
+   background-color:#fff;
+   width: 150px;
 }
 
 .ws{
