--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
@@ -1028,7 +1028,7 @@ main {
 }
 
 .record2 .ta6{
-	width: 80%;
+	width: 600px;
 	font-size: 0.8em;
 	padding: 1px;
 	margin: auto;
@@ -1048,7 +1048,7 @@ main {
 }
 
 .record2 .ta6 td{
-	text-align: center;
+	text-align: left;
 	padding: 2px;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
