--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
@@ -1050,7 +1050,7 @@ main {
 .record2 .ta6 td{
 	text-align: left;
 	padding: 2px;
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
+	border-left: 1px solid #fff;
+	border-right: 1px solid #fff;
 	vertical-align: middle;
 }
