--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/css/style.css
@@ -411,6 +411,39 @@ footer .pr {display: block;}
 	text-align: center;	/*左よせにする*/
 }
 
+.ta2 caption {
+	font-weight: bold;			/*太字に*/
+	padding: 10px 5px;			/*上下、左右へのボックス内の余白。基本的に数行下の「.ta2 th, .ta2 td」のpaddingと揃えておけばOKです。*/
+	background: #666;			/*背景色*/
+	color: #fff;				/*文字色*/
+	text-align: left;
+}
+
+/*ta2テーブルブロック設定*/
+.ta2 {
+	border-top: 1px solid #ccc;	/*テーブルの一番上の線。幅、線種、色*/
+	table-layout: fixed;
+	width: 100%;
+	margin-bottom: 30px;		/*「30px」がテーブルの下に空けるスペースです*/
+}
+
+/*tr（１行分）タグ設定*/
+.ta2 tr {
+	border-bottom: 1px solid #ccc;	/*テーブルの下線。幅、線種、色*/
+}
+
+/*th（左側）、td（右側）の共通設定*/
+.ta2 th, .ta2 td {
+	padding: 10px;		/*上下、左右へのボックス内の余白*。基本的に数行上の「.ta2 caption」のpaddingと揃えておけばOKです。*/
+	word-break: break-all;	/*英語などのテキストを改行で自動的に折り返す設定。これがないと、テーブルを突き抜けて表示される場合があります。*/
+}
+
+/*th（左側）のみの設定*/
+.ta2 th {
+	width: 90px;
+	text-align: center;	/*左よせにする*/
+}
+
 
 /*PAGE TOP（↑）設定
 ---------------------------------------------------------------------------*/
@@ -593,6 +626,27 @@ main {
 	max-width: 200px;
 }
 
+.ta2 {
+	max-width: 800px;
+}
+	
+/*テーブル１行目に入った見出し部分（※caption）*/
+.ta2 caption {
+	padding: 5px 15px;		/*上下、左右へのボックス内の余白*/
+	text-align: left;
+}
+
+/*th（左側）、td（右側）の共通設定*/
+.ta2 th, .ta2 td {
+	padding: 10px;		/*上下、左右へのボックス内の余白*/
+}
+
+/*th（左側）のみの設定*/
+.ta2 th {
+	width: 15%;		/*幅*/
+	max-width: 200px;
+}	
+	
 
 /*その他
 ---------------------------------------------------------------------------*/
